# bagent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api.md  field_mapping.md
src/: agent.py  auth.py  llm.py  schemas.py  server.py  sessions.py  settings.py
src/tools/: __init__.py  _endpoints.py  _http.py  fol.py  logs.py  mapping.py  supplier.py  sync.py  ui.py
web/: README.md  integration-mdm-front.md
web/src/: ChatWidget.vue  actions.ts  bagent.ts
